--- a/informe.html
+++ b/informe.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Liliana Inés González / Juan Shifres" />
+<meta name="author" content="Liliana Inés González - Juan Shifres" />
 
 
 <title>Tp1_Grupo_5</title>
@@ -350,7 +350,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Tp1_Grupo_5</h1>
-<h4 class="author">Liliana Inés González / Juan Shifres</h4>
+<h4 class="author">Liliana Inés González - Juan Shifres</h4>
 
 </div>
 
@@ -392,6 +392,21 @@ max_neduc_ocup_sexo_annio_n_instruc_limpio &lt;- read_csv(&quot;datos/max_neduc_
 #verificar tipo de datos data.frame
 class(max_neduc_ocup_sexo_annio_n_instruc_limpio)</code></pre>
 <pre><code>## [1] &quot;spec_tbl_df&quot; &quot;tbl_df&quot;      &quot;tbl&quot;         &quot;data.frame&quot;</code></pre>
+<pre class="r"><code>#tipo de dato tiene cada columna
+str(max_neduc_ocup_sexo_annio_n_instruc_limpio)</code></pre>
+<pre><code>## spc_tbl_ [144 × 4] (S3: spec_tbl_df/tbl_df/tbl/data.frame)
+##  $ anio             : num [1:144] 2012 2012 2012 2012 2012 ...
+##  $ sexo             : chr [1:144] &quot;TOTAL&quot; &quot;TOTAL&quot; &quot;TOTAL&quot; &quot;TOTAL&quot; ...
+##  $ porc_poblacion   : num [1:144] 2.19 6.64 13.44 17.99 24.98 ...
+##  $ nivel_instruccion: chr [1:144] &quot;Primario incompleto&quot; &quot;Primario completo&quot; &quot;Secundario incompleto&quot; &quot;Secundario completo&quot; ...
+##  - attr(*, &quot;spec&quot;)=
+##   .. cols(
+##   ..   anio = col_double(),
+##   ..   sexo = col_character(),
+##   ..   porc_poblacion = col_double(),
+##   ..   nivel_instruccion = col_character()
+##   .. )
+##  - attr(*, &quot;problems&quot;)=&lt;externalptr&gt;</code></pre>
 <pre class="r"><code>#ver cantidad de filas y columnas
 nrow(max_neduc_ocup_sexo_annio_n_instruc_limpio)</code></pre>
 <pre><code>## [1] 144</code></pre>
