--- a/informe.html
+++ b/informe.html
@@ -361,12 +361,12 @@ display: none;
 Estadísticas sobre actividad, empleo, desocupación y subocupación de la
 población de la Ciudad de Buenos Aires -“Mercado laboral” el origen de
 la información se encuentra en el portal de Datos Abiertos de CABA “<a href="https://data.buenosaires.gob.ar/dataset/mercado-laboral" class="uri">https://data.buenosaires.gob.ar/dataset/mercado-laboral</a>”.
-Se trata de datos tomados entre los años 2011 y 2019 y que fueran
-publicados durante el 2021. La fecha de su última actualización es mayor
-de 2021. En este informe se procesarán datos correspondiente a la
-distribución de la población ocupada, según máximo nivel educativo
-alcanzado por hombres y mujeres. Datos tomados bimestralmente, entre el
-2012 y 2019, inclusive.</p>
+En este portal se encuentran un conjunto de datos tomados entre los años
+2011 y 2019 y que fueran publicados durante el 2021. La fecha de su
+última actualización es mayo de 2021. En este informe se procesarán
+datos correspondiente a la distribución de la población ocupada, según
+máximo nivel educativo alcanzado por hombres y mujeres. Datos tomados
+entre el 2012 y 2019, inclusive.</p>
 <p>Población ocupada según máximo nivel educativo. Perfil educativo de
 la población adulta ocupada según el máximo nivel de enseñanza alcanzado
 por hombres y mujeres de la Ciudad de Buenos Aires, entre 2012 y
@@ -374,10 +374,12 @@ por hombres y mujeres de la Ciudad de Buenos Aires, entre 2012 y
 <pre class="r"><code>## Lectura de los archivos
 
 nivel_educativo_sexo_anio &lt;- read_csv(&quot;datos/max_neduc_ocup_sexo__annio__n_instruc_limpio.csv&quot;)</code></pre>
-<pre><code>## Rows: 144 Columns: 4── Column specification ────────────────────────────────────────────────────────
+<pre><code>## Rows: 144 Columns: 4
+## ── Column specification ────────────────────────────────────────────────────────
 ## Delimiter: &quot;,&quot;
 ## chr (2): sexo, nivel_instruccion
 ## dbl (2): anio, porc_poblacion
+## 
 ## ℹ Use `spec()` to retrieve the full column specification for this data.
 ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
 <pre class="r"><code># mostramos las primeras 10 observaciones que nos permite considerar la distibución de hombres y mujeres y totales para las distintas categorias de nivel de instrucción que se han utilizado en el relevamiento
@@ -425,7 +427,7 @@ nrow(nivel_educativo_sexo_anio)</code></pre>
 <pre><code>## [1] 144</code></pre>
 <pre class="r"><code>ncol(nivel_educativo_sexo_anio)</code></pre>
 <pre><code>## [1] 4</code></pre>
-<pre class="r"><code>#vericamos que no haya valores nulos en el data.frame
+<pre class="r"><code>#verificamos que no haya valores nulos en el data.frame
 
 any(is.na(nivel_educativo_sexo_anio$anio)) &amp;
 any(is.na(nivel_educativo_sexo_anio$sexo)) &amp;
@@ -439,25 +441,19 @@ filter(nivel_educativo_sexo_anio,porc_poblacion&lt;0)</code></pre>
 ## # ℹ 4 variables: anio &lt;dbl&gt;, sexo &lt;chr&gt;, porc_poblacion &lt;dbl&gt;,
 ## #   nivel_instruccion &lt;chr&gt;</code></pre>
 <p>Los datos observados no tiene valores nulos, ni negativos, la
-cantidad decimales de la columna de “porc_poblacion” difieren según los
-años, en el 2012 cuenta con 16 decimales y en el resto de los periodos
-tan solo cuenta con un decimal, se normalizó, para su mejor lectura, a 2
-decimales creando la columna “porcentaje_poblacion”</p>
+cantidad de decimales de la columna de “porc_poblacion” difieren según
+los año: en el 2012 cuenta con 16 decimales y en el resto de los
+periodos tan solo cuenta con un decimal. Se normalizó, para su mejor
+lectura, a 2 decimales creando la columna “porcentaje_poblacion”</p>
 <pre class="r"><code>nivel_educativo_sexo_anio&lt;-nivel_educativo_sexo_anio %&gt;% 
   mutate(porcentaje_poblacion = round(porc_poblacion,2))</code></pre>
-<p>¿Cuál es su valor medio y desvío estándard? - ¿Cuál es su rango
-(valor máximo y valor mínimo)? - ¿Hay alguna anomalía que sugiera que
-hay datos incorrectos? Valores imposibles (como valores negativos en una
-variable que sólo puede ser positiva) o poco creíbles. - ¿Cuántas
-observaciones hay por cada grupo? ¿Cuántos valores faltantes? ¿Hay
-diferencias?</p>
 <p>#valor medio y Desvío estándard por: sexo y nivel de instrucción</p>
 <pre class="r"><code>nivel_educativo_sexo_anio %&gt;% 
   filter(sexo==&#39;m&#39; |sexo==&#39;v&#39;) %&gt;%
   group_by(sexo, nivel_instruccion) %&gt;% 
   summarise(porcentaje_poblacion_media = mean(porcentaje_poblacion),porcentaje_poblacion_sd = sd(porcentaje_poblacion))</code></pre>
-<pre><code>## `summarise()` has grouped output by &#39;sexo&#39;. You can override using the `.groups`
-## argument.</code></pre>
+<pre><code>## `summarise()` has grouped output by &#39;sexo&#39;. You can override using the
+## `.groups` argument.</code></pre>
 <pre><code>## # A tibble: 12 × 4
 ## # Groups:   sexo [2]
 ##    sexo  nivel_instruccion     porcentaje_poblacion_media porcentaje_poblacion…¹
@@ -475,6 +471,16 @@ diferencias?</p>
 ## 11 v     Superior completo                          33.3                   2.76 
 ## 12 v     Superior incompleto                        23.8                   0.644
 ## # ℹ abbreviated name: ¹​porcentaje_poblacion_sd</code></pre>
+<p>El cuadro anterior nos permite visualizar el porcentaje promedio de
+máximo nivel educativo alcanzado por hombres y mujeres ocupados en el
+periodo 2012-2019. Comparando entre sexos de los ocupados, Si bien se
+observa que, para ambos sexos, el grueso de la población ocupada
+registra estudios superiores, este indicador es mayor para el caso de
+las mujeres, mientras que los varones registran mayor porcentaje en el
+rango de estudios secundarios. Llama la atención el valor de la
+desviación estándar para el nivel “superior completo”, para ambos sexos,
+lo que nos indica que hay un alta dispersión de valores entre los
+registros de los años.</p>
 </div>
 <div id="valor-maximo-y-valor-minimo" class="section level1">
 <h1>valor maximo y valor minimo</h1>
@@ -482,8 +488,8 @@ diferencias?</p>
   filter(sexo==&#39;m&#39; |sexo==&#39;v&#39;) %&gt;%
   group_by(sexo, nivel_instruccion) %&gt;% 
   summarise(porcentaje_poblacion_max = max(porcentaje_poblacion,na.rm=TRUE),porcentaje_poblacion_min = min(porcentaje_poblacion,na.rm=TRUE), rango=max(porcentaje_poblacion,na.rm=TRUE)-min(porcentaje_poblacion,na.rm=TRUE))</code></pre>
-<pre><code>## `summarise()` has grouped output by &#39;sexo&#39;. You can override using the `.groups`
-## argument.</code></pre>
+<pre><code>## `summarise()` has grouped output by &#39;sexo&#39;. You can override using the
+## `.groups` argument.</code></pre>
 <pre><code>## # A tibble: 12 × 5
 ## # Groups:   sexo [2]
 ##    sexo  nivel_instruccion   porcentaje_poblacion…¹ porcentaje_poblacion…² rango
@@ -501,6 +507,10 @@ diferencias?</p>
 ## 11 v     Superior completo                    37.8                    30.1  7.70
 ## 12 v     Superior incompleto                  24.4                    22.6  1.80
 ## # ℹ abbreviated names: ¹​porcentaje_poblacion_max, ²​porcentaje_poblacion_min</code></pre>
+<p>El rango entre valores máximos y mínimos de los porcentajes de
+ocupados según nivel educativo, nos vuelve a mostrar una dispersión de
+datos significativa entre los años 2012-2019 para el estrato de “nivel
+superior completo”.</p>
 <div id="hipótesis" class="section level2">
 <h2>Hipótesis</h2>
 <p>¿se incrementó el nivel educativo de la población ocupada de la
